# TeaPot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Naming.md  README.md  log.txt
BoilingHotWater/: BoilingHotWater  BoilingHotWater.cpp  BoilingHotWater.hpp  CMakeLists.txt  EntryPoint
BoilingHotWater/BHW/: DLLEntryPoint  DLLEntryPoint.cpp  EntryPoint  EntryPoint.cpp
BoilingHotWater/BHW/application/: Application.cpp  Application.hpp
BoilingHotWater/BHW/ecs/: Component.hpp  ComponentBitMask.hpp  ECS.cpp  ECS.hpp  ECSBaseEventSystem.hpp  Entity.hpp  EventSystem.hpp  SceneManager.hpp
BoilingHotWater/BHW/utils/: Assert.cpp  Assert.hpp  Debug.hpp  Hash.cpp  Hash.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  TypeTraits.hpp
BoilingHotWater/BHW/utils/console/: ANSI.cpp  ANSI.hpp  Console.cpp  Console.hpp
BoilingHotWater/BHW/utils/data/: Data.hpp  FixedData.hpp  HashedData.hpp
BoilingHotWater/BHW/utils/dlls/: DLL.hpp
BoilingHotWater/BHW/utils/event/: DynamicEventSystem.hpp  EventSystem.hpp
BoilingHotWater/BHW/utils/io/: FileHandler.cpp  FileHandler.hpp
BoilingHotWater/application/: Application.cpp  Application.hpp  ApplicationThread.cpp  ApplicationThread.hpp
BoilingHotWater/graphics/window/: Window.cpp  Window.hpp
BoilingHotWater/utils/: Console.cpp  Console.hpp  Logger.cpp  Logger.hpp  Loop.cpp  Loop.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp
BoilingHotWater/utils/event/: Event.cpp  Event.hpp
BoilingHotWater/utils/threads/: ContinuousThread.cpp  ContinuousThread.hpp  Thread.cpp  Thread.hpp
BoilingHotWater/window/: Window.cpp  Window.hpp
BoilingHotWater/window/grpaphics_api/: GraphicsAPI.hpp  Window_OpenGL_Impl.cpp  Window_OpenGL_Impl.hpp
BoilingHotWater/window/input/: Input.cpp  Input.hpp  Key.cpp  Key.hpp  KeyBoard.cpp  KeyBoard.hpp  Mouse.cpp  Mouse.hpp  MouseButton.hpp  MouseWheel.cpp  MouseWheel.hpp
MultiThreading_GLFW_ImGui_Minimum/: App.cpp  App.hpp  CMakeLists.txt
SinkingSugarCubes/: CMakeLists.txt
Tea/: CMakeLists.txt  EventSubscriber.hpp  Tea.cpp  Tea.hpp
Tea/Tea/: EventSubscriber.hpp  Tea.hpp  TeaEntrypoint.cpp
Tea/Tea/application/: EventSubscriber.cpp  EventSubscriber.hpp  Tea.cpp  Tea.hpp
TeaBag/: CMakeLists.txt
TeaBag/TB/etc/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
TeaBrewer/: CMakeLists.txt  TeaBrewer.cpp  TeaBrewer.hpp  TeaBrewerBuildTarget.hpp  TeaBrewerBuilder.cpp  TeaBrewerBuilder.hpp  TeaBrewerConfig.cpp  TeaBrewerUpdater.cpp  TeaBrewerUpdater.hpp
TeaBrewer/TB/: TeaBrewer.cpp  TeaBrewer.hpp  TeaBrewerBuilder.cpp  TeaBrewerBuilder.hpp  TeaBrewerConfig.cpp  TeaBrewerConfig.hpp  TeaBrewerEntryPoint.cpp  TeaBrewerUpdater.cpp  TeaBrewerUpdater.hpp
TeaCup/: CMakeLists.txt
TeaCup/TC/: TeaCup.hpp  TeaCupBaseEventSystem.hpp  TeaCupRuntime.cpp  TeaCupRuntime.hpp
TeaCup/TC/gapi/: GAPI.cpp  GAPI.hpp
TeaCup/TC/input/: Input.cpp  Input.hpp  InputAdapter.cpp  InputAdapter.hpp  Key.cpp  Key.hpp  KeyBoard.cpp  KeyBoard.hpp  KeyCode.cpp  KeyCode.hpp  Mouse.cpp  Mouse.hpp  MouseButton.cpp  MouseButton.hpp  MouseWheel.cpp  MouseWheel.hpp
TeaMath/: CMakeLists.txt  TeaMath  TeaMath.cpp  TeaMath.hpp
TeaMath/math/: math.cpp  math.hpp  trig.cpp  trig.hpp
TeaMath/vector/: vec.hpp  vec1.cpp  vec1.hpp  vec2.cpp  vec2.hpp  vec3.hpp  vec4.cpp  vec4.hpp
TeaPot/: CMakeLists.txt  Resources.cmake  Resources.cpp  Resources.hpp  TeaPot.cpp  TeaPot.hpp  TeaPotEntryPoint.cpp  TeaPotEntryPoint.hpp
TeaPot/TP/: TeaPot.cpp  TeaPot.hpp  TeaPotEntryPoint.cpp  TeaPotEntryPoint.hpp
TeaPot/TP/application/: EventSubscriber.cpp  EventSubscriber.hpp  TeaPot.cpp  TeaPot.hpp
TeaPot/TP/editor/: Editor.hpp  TeaPotECS.hpp
TeaPot/TP/project/: Build.hpp  ProjectStructure.hpp  ProjectStructure.txt  TeaPotProject.cpp  TeaPotProject.hpp  TeaPotProjectBuilder.cpp  TeaPotProjectBuilder.hpp
TeaPot/application/: EventSubscriber.hpp  TeaPot.cpp  TeaPot.hpp
TeaPot/application/gui/: Dockspace.cpp  Dockspace.hpp  Inspector.hpp  Menubar.cpp  Menubar.hpp
TeaPot/editor/: Editor.cpp  Editor.hpp
TeaPot/editor/imgui/: ImGuiWindow.cpp  ImGuiWindow.hpp
TeaPot/project/: NativeScripts.cpp  NativeScripts.hpp  Project.cpp  Project.hpp  ProjectMetaData.hpp  ProjectTemplateFiles.cpp  ProjectTemplateFiles.hpp  TeaPotProject.hpp  TeaPotProjectBuilder.cpp  TeaPotProjectBuilder.hpp
TeaPot/project/files/: CMakeLists.txt.hpp  EntryPoint_Final.cpp.hpp  EntryPoint_NativeScriptCore.cpp.hpp  EventSubscriber.hpp.hpp  NativeScripts.cpp.hpp  Resources.hpp.hpp  Tea.cpp.hpp  Tea.hpp.hpp
TeaPotBaseProject/.teapot/project/: CMakeLists.txt
core/: CMakeLists.txt  DigitalTea  DigitalTea.cpp  DigitalTea.hpp  Engine  Engine.cpp  Engine.hpp  EntryPoint  EntryPoint.hpp  core.h
core/application/: Application.cpp  Application.hpp  ApplicationLoop.cpp  ApplicationLoop.hpp
core/console/: console.h
core/engine/: Engine.cpp  Engine.h
core/etc/: Component.hpp  Engine.cpp  Engine.hpp  Entity.hpp  GameEngine.cpp  GameEngine.hpp  Scene.cpp  Scene.hpp
core/graphics/: Window.cpp  Window.hpp
core/graphics/imgui/: ImGuiObject.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp
core/utils/: Activateable.cpp  Activateable.hpp  Console.hpp  Logger.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp  console.cpp  console.h  logger.cpp  logger.h  process.cpp  process.h
core/utils/serialization/: Serializable.cpp  Serializable.hpp
cpp/: CMakeLists.txt  README.md  Test.cpp
cpp/cmake/: executable.cmake  java.cmake  library.cmake  opengl.cmake  project.cmake
cpp/src/engine/core/: main.h  (+2 more)
cpp/src/java/: ImGui.h  OpenGL.cpp  OpenGL.h
cpp/src/opengl/: OpenGL.cpp  OpenGL.h
cpp/src/testing/: app.cpp  app.h  test.cpp
editor/: CMakeLists.txt  editor.cpp  editor.h
editor/src/: DigitalTeaPot.cpp  DigitalTeaPot.hpp  editor.cpp  editor.hpp
editor/src/editor/: Editor.hpp
launcher/: CMakeLists.txt
launcher/src/: launcher.cpp  launcher.hpp  wrapper.h
runtime/: CMakeLists.txt
runtime/src/: runtime.cpp
scripting/java/api/: CMakeLists.txt  CoreTest.cpp  CoreTest.h  JNITest.cpp  JNITest.h
wrapper/: CMakeLists.txt  wrapper.cpp
wrapper/src/: wrapper.cpp
(+305 files in other folders)
