project(MultiThreading_GLFW_ImGui_Minimum)

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

add_executable(MultiThreading_GLFW_ImGui_Minimum WIN32
    ${SOURCES}
)

target_include_directories(MultiThreading_GLFW_ImGui_Minimum PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(MultiThreading_GLFW_ImGui_Minimum PUBLIC 
    BoilingHotWater
    TeaCup
)

set_target_properties(MultiThreading_GLFW_ImGui_Minimum PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)

install(TARGETS MultiThreading_GLFW_ImGui_Minimum RUNTIME DESTINATION ${OUTPUT_DIR})