project(Tea)

set(TeaHeaders
    ${CMAKE_CURRENT_SOURCE_DIR}/Tea/Tea.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Tea/EventSubscriber.hpp
)

set(TeaSources
    ${CMAKE_CURRENT_SOURCE_DIR}/Tea/Tea.cpp
)

add_library(Tea STATIC)

target_include_directories(Tea PRIVATE ${PROJECT_SOURCE_DIR})

target_sources(Tea 
    PRIVATE ${TeaSources}
    PUBLIC FILE_SET HEADERS
    BASE_DIRS ${PROJECT_SOURCE_DIR}
    FILES ${TeaHeaders}
)

target_link_libraries(Tea PUBLIC
    BoilingHotWater
    TeaCup
)

install(TARGETS Tea FILE_SET HEADERS)

#set_target_properties(Tea PROPERTIES 
#    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
#    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
#    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
#    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
#    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
#    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
#    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
#    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
#    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
#)