project(TeaMath)

file(GLOB_RECURSE FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
)

list(APPEND FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/TeaMath
)

add_library(TeaMath
    ${FILES}
)

target_include_directories(TeaMath PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(TeaMath PUBLIC 
    #OpenGL::GL
    #glfw
    #glm::glm
    #glew
    #imgui
    #${JNI_LIBRARIES}
)

set_target_properties(TeaMath PROPERTIES 
    #SUFFIX ".dll"
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)