project(EngineCore)

#core files
file(GLOB_RECURSE CORE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
)

add_library(engine_core
    ${CORE_FILES}
    ${CMAKE_CURRENT_SOURCE_DIR}/DigitalTea
)

target_include_directories(engine_core PUBLIC 
    #${GLEW_INCLUDE_DIR}
    #${IMGUI_DIR}
    #${IMGUI_BACKENDS_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(engine_core PUBLIC 
    OpenGL::GL
    glfw
    glm::glm
    glew
    imgui
    ${JNI_LIBRARIES}
)

set_target_properties(engine_core PROPERTIES 
    #SUFFIX ".dll"
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)