project(EngineEditor)

add_executable(engine_editor WIN32
    #${CORE_FILES}
    ${EDITOR_FILES}
)

target_include_directories(engine_editor PUBLIC 
    ${INCLUDE_DIRS}
    #${CORE_DIR}
    ${EDITOR_DIR}
)

target_link_libraries(engine_editor PUBLIC ${LIBRARIES} engine_core)

set_target_properties(engine_editor PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)

install(TARGETS engine_editor RUNTIME DESTINATION bin)