project(EngineLauncher)

add_executable(engine_launcher WIN32 
    #${CORE_FILES} 
    ${LAUNCHER_FILES}
)

target_include_directories(engine_launcher PUBLIC 
    ${INCLUDE_DIRS}
    #${CORE_DIR}
    ${LAUNCHER_DIR}
)

target_link_libraries(engine_launcher PUBLIC ${LIBRARIES} engine_core)

set_target_properties(engine_launcher PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)

install(TARGETS engine_launcher RUNTIME DESTINATION bin)