project(EngineRuntime)

add_executable(engine_runtime WIN32 
    #${CORE_FILES} 
    ${RUNTIME_FILES}
)

target_include_directories(engine_runtime PUBLIC 
    ${INCLUDE_DIRS}
    #${CORE_DIR}
    ${RUNTIME_DIR}
)

target_link_libraries(engine_runtime PUBLIC ${LIBRARIES} engine_core)

set_target_properties(engine_runtime PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)

install(TARGETS engine_runtime RUNTIME DESTINATION bin)