project(EngineJavaApi)

add_library(engine_java_api SHARED 
    #${CORE_FILES} 
    ${JAVA_API_FILES}
)

target_include_directories(engine_java_api PUBLIC 
    ${INCLUDE_DIRS}
    #${CORE_DIR}
    ${JAVA_API_DIR}
)

target_link_libraries(engine_java_api PUBLIC ${LIBRARIES} engine_core)

set_target_properties(engine_java_api PROPERTIES 
    SUFFIX ".dll"
    #ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    #LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    #ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    #LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    #ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    #LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)